--- a/changelog.html
+++ b/changelog.html
@@ -38,7 +38,7 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="changelog.html">Changelog</a></li>
+                <!-- <li><a href="changelog.html" style="color: red;">Changelog</a></li> -->
             </ul>
         </div>
     </nav>   
@@ -190,6 +190,23 @@
         </div>
     </section>
 
+    <section>
+        <div class="frosted-glass">
+            <div class="changelog">
+                <h2>Changelog #7</h2>
+                <h3>4/7/2022</h3>
+                <ul>
+                    <li>Updated information in home page</li>
+                    <li>Added new work experience entry</li>
+                    <li>Modified skills in "Skills"</li>
+                    <li>Added new project in "Projects"</li>
+                    <li>Hid changelog from public view</li>
+                </ul>
+                <p><strong class="changelog-remark">Remarks: </strong>Finished my first internship. It was very eye-opening.</p>
+            </div>
+        </div>
+    </section>
+
     <br>
     <br>
     <br>
@@ -198,7 +215,7 @@
     <!-- <section>
         <div class="frosted-glass">
             <div class="changelog">
-                <h2>Changelog #2</h2>
+                <h2>Changelog #</h2>
                 <h3>DATE</h3>
                 <ul>
                     <li></li>
