--- a/experience.html
+++ b/experience.html
@@ -34,11 +34,11 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="education.html">Education</a></li>
-                <li><a href="experience.html">Experience</a></li>
+                <li><a href="experience.html" style="color: red;">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="changelog.html">Changelog</a></li>
+                <!-- <li><a href="changelog.html">Changelog</a></li> -->
             </ul>
         </div>
     </nav>   
@@ -104,23 +104,23 @@
                 <h2 class="warning">Note: Only contains information that are non-NDA and non-confidential</h2>
 
             <!-- Button 1 -->
-            <button class="accordion accordion-white-border disabled">JOB_POSITION @ JOB_PLACE <i style="font-size:24px" class="fa">&#xf078;</i></button>
+            <button class="accordion accordion-white-border disabled">Software Engineer Intern @ Capital Dynamics Asset Management <i style="font-size:24px" class="fa">&#xf078;</i></button>
             <div class="panel-experience">
-                <!-- ofessional Work Experience 1-->
+                <!-- Professional Work Experience 1-->
                 <table class="experience-table">
                     <tr>
                       <td>Position</td>
                       <td>
                           <!-- Info about position at work -->
-                          JOB_POSITION
+                          Software Engineer Intern
                       </td>
                     </tr>
 
                     <tr>
                         <td>Work</td>
                         <td>
-                            <!-- Info about Work -->
-                            JOB_PLACE (with link leading to company's website)
+                            <!-- Info about Work-->
+                            Capital Dynamics Asset Management
                         </td>
                     </tr>
 
@@ -128,15 +128,7 @@
                         <td>Duration</td>
                         <td>
                             <!-- Info about duration of work -->
-                            XX/XXXX - XX/XXXX
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>Location</td>
-                        <td>
-                            <!-- Info about State, Country -->
-                            State, Country
+                            01/2022 - 06/2022
                         </td>
                     </tr>
 
@@ -145,17 +137,12 @@
                         <td>
                             <!-- Info about what you've learnt -->
                             <ul>
-                                <li>TEXT 1</li>
-                                <li>TEXT 2</li>
+                                <li>Development of Mobile App using Dart, Flutter and Bloc design pattern</li>
+                                <li>Development of Frontend Website using ReactJS and various React UI Libraries</li>
+                                <li>Backend development using Django and Django REST Framework to create APIs and webhook listener</li>
+                                <li>Integrated a Know-Your-Customer service into the Frontend Website, Mobile App, and backend</li>
+                                <li>Written code documentation for 4 different code bases</li>
                             </ul>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>Remarks</td>
-                        <td class="experience-remarks">
-                            <!-- Author's Note -->
-                            TEXT 3
                         </td>
                     </tr>
                 </table>
