--- a/projects.html
+++ b/projects.html
@@ -36,9 +36,9 @@
                 <li><a href="education.html">Education</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html" style="color: red;">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="changelog.html">Changelog</a></li>
+                <!-- <li><a href="changelog.html">Changelog</a></li> -->
             </ul>
         </div>
     </nav>   
@@ -306,7 +306,7 @@
                 <h1 class="h1-underline-turquoise disabled">Personal Projects</h1>
             
             <!-- Button 1 -->
-            <button class="accordion accordion-white-border disabled">Personal Website <i style="font-size:24px" class="fa">&#xf078;</i></button>
+            <button class="accordion accordion-white-border disabled">Portfolio Website (Version 1)<i style="font-size:24px" class="fa">&#xf078;</i></button>
             <div class="panel-projects projects-personal">
                 <!-- Personal Project 1-->
                 <table class="projects-table">
@@ -314,7 +314,7 @@
                       <td>Project</td>
                       <td>
                           <!-- Info about Project Title -->
-                          Personal Website
+                          Portfolio Website (Version 1)
                       </td>
                     </tr>
 
@@ -322,7 +322,7 @@
                         <td>Role</td>
                         <td>
                             <!-- Info about Role in this Project -->
-                            Creator
+                            Programmer and Designer
                         </td>
                     </tr>
 
@@ -344,6 +344,53 @@
                         <td class="projects-remarks">
                             <!-- Author's Note -->
                             Overall, I enjoyed the whole learning process and solving different types of problems to construct a simple website like this. I am truly grateful that I decided to take on this project as it allows me to gain insight into what a user usually sees on a website.
+                        </td>
+                    </tr>
+                </table>
+                <!-- <br> -->
+            </div> <!-- End of accordion -->
+
+            <br>
+
+            <!-- Button 2 -->
+            <button class="accordion accordion-white-border disabled">Portfolio Website (Version 2)<i style="font-size:24px" class="fa">&#xf078;</i></button>
+            <div class="panel-projects projects-personal">
+                <!-- Personal Project 1-->
+                <table class="projects-table">
+                    <tr>
+                      <td>Project</td>
+                      <td>
+                          <!-- Info about Project Title -->
+                          Portfolio Website (Version 2)
+                      </td>
+                    </tr>
+
+                    <tr>
+                        <td>Role</td>
+                        <td>
+                            <!-- Info about Role in this Project -->
+                            Programmer and Designer
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>Outcomes</td>
+                        <td>
+                            <!-- Info about what you've learnt -->
+                            <ul>
+                                <li>Used React JS, SCSS, React UI Frameworks such as Ant Design and Material UI, Framer Motion and sanity.io</li>
+                                <li>Produced a more modern and simplistic design using frameworks</li>
+                                <li>Produced a website which introduced some bits of animations</li>
+                                <li>Was able to use sanity.io to act as a backend and a Content Management System</li>
+                            </ul>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>Remarks</td>
+                        <td class="projects-remarks">
+                            <!-- Author's Note -->
+                            Took the knowledge I learned in my first internship and applied it to my new portfolio project. It now takes less hassle to change and modify the contents of the page due to sanity.io acting as a Content Management Systen.
                         </td>
                     </tr>
                 </table>
