--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="changelog.html">Changelog</a></li>
+                <li><a href="contact.html" style="color: red;">Contact</a></li>
+                <!-- <li><a href="changelog.html">Changelog</a></li> -->
             </ul>
         </div>
     </nav>   
