--- a/education.html
+++ b/education.html
@@ -33,12 +33,12 @@
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="education.html">Education</a></li>
+                <li><a href="education.html" style="color: red;">Education</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="changelog.html">Changelog</a></li>
+                <!-- <li><a href="changelog.html">Changelog</a></li> -->
             </ul>
         </div>
     </nav>   
