--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <nav id="nav-bar" class="disabled">
         <div class="container">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" style="color: red;">Home</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="changelog.html">Changelog</a></li>
+                <!-- <li><a href="changelog.html">Changelog</a></li> -->
             </ul>
         </div>
     </nav>     
@@ -52,19 +52,8 @@
                 <p>Hello! Welcome to my first ever attempt at creating a website. It might look rough around the edges but I'm still getting used to it. Anyway, the reason I started working on this project is to expand my knowledge on how websites are developed. I guess we can think of this project to satisfy my curiosity on front-end development. I went into this not knowing how it works, so I started doing some research and watched some crash courses on HTML, CSS and JS on Youtube. After all that, this is how it turned out.</p>
                 <p>I'll try to treat this as a long-term project where I try to keep this website as up-to-date as possible based on my own progress. I'll also introduce some new features here and there to spice my website even more! Other than that, thank you for reading this and I hope you enjoy my first ever project.</p>
                 <p>Here are some of the videos that got me started: <a target='_block' href="https://www.youtube.com/watch?v=UB1O30fR-EE">HTML</a>, <a target='_block' href="https://www.youtube.com/watch?v=yfoY53QXEnI">CSS</a> and <a target='_block' href="https://www.youtube.com/watch?v=hdI2bqOjy3c">JS</a>. Special props to <a target='_block' href="https://www.youtube.com/channel/UC29ju8bIPH5as8OGnQzwJyA">Traversy Media</a> for the spectacular videos!</p>
-        </div>
-    </section>
-
-    <!-- About Myself -->
-    <section>
-        <div class="frosted-glass">
-            <div class="box-text strokeme">
-                <h1 class="h1-underline-turquoise">About Myself</h1>
-                <p>I started off studying Accounting and Economics in my secondary and college years. I also did some Psychology when I was taking my Australian Matriculation (which was pretty interesting to say the least). At that time, I never had any intention nor the idea of getting into Computer Science.</p>
-                <p>By the time I have to make a choice on which undergraduate courses should I partake in, I have to seriously contemplate on what courses interest me. I thought about getting into some Accounting course but (in my heart) I know it wasn't something I wanted to do. So, I started asking the people around me for their opinions and stumbled upon Computer Science.</p>
-                <p>So I took the risk and applied to a Computer Science course in Monash University Malaysia and let's just say I love every second of it! I just can't describe how satisfying it is to make decisions and solve different types of problems. Yes, of course there are many challenges I have to solve on my own (and with the help of Mr. Google) such as dealing with the COVID-19 situation, adjusting to having online classes and having minimal social interaction with your peers. But then again, life is full of hardships and overcoming them is what makes us grow.</p>
+                <p>Link to <a target='_block' href="https://junhong-portfolio.netlify.app/">my new portfolio page</a> created using React JS, SCSS, React UI Frameworks, and sanity.io.</p>
             </div>
-        </div>
     </section>
 
     <!-- My Future Goals -->
@@ -95,7 +84,7 @@
             <div class="box-text strokeme">
                 <!-- <strong class="faq-question">Q</strong>N<strong class="faq-answer">A</strong> -->
                 <h1 class="h1-underline-turquoise">FAQ</h1>
-                <p><strong class="faq-question">Q:</strong> How frequent will this website be updated? <br> <strong class="faq-answer">A:</strong> Might stop updating this website after I have completed my new Portfolio project.</p>
+                <p><strong class="faq-question">Q:</strong> How frequent will this website be updated? <br> <strong class="faq-answer">A:</strong> I will try to maintain it along with my React JS portfolio.</p>
 
                 <p><strong class="faq-question">Q:</strong> How long will this project last? <br> <strong class="faq-answer">A:</strong> I might stop continuing maintaining this project as I have start a new Portfolio project using more modern web development techniques.</p>
 
