--- a/skills.html
+++ b/skills.html
@@ -35,10 +35,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="skills.html">Skills</a></li>
+                <li><a href="skills.html" style="color: red;">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="changelog.html">Changelog</a></li>
+                <!-- <li><a href="changelog.html">Changelog</a></li> -->
             </ul>
         </div>
     </nav>   
@@ -55,21 +55,14 @@
                       <td>Adaptability</td>
                       <td>Analytical</td>
                       <td>Communication</td>
-                      <td>Leadership</td>
+                      <td>Team Player</td>
                     </tr>
 
                     <tr>
                         <td>Listener</td>
                         <td>Problem-solving</td>
-                        <td>Project Management</td>
-                        <td>Research</td>
-                    </tr>
-
-                    <tr>
-                        <td>Team Player</td>
                         <td>Time Management</td>
-                        <td></td>
-                        <td></td>
+                        <td>Research</td>
                     </tr>
 
                 </table>
@@ -110,10 +103,16 @@
                 <div class="skils-table-overflow">
                 <table id="skills-table">
                     <tr>
-                      <td>HTML5</td>
+                      <td>HTML</td>
                       <td>CSS</td>
-                      <td></td>
-                      <td></td>
+                      <td>JS</td>
+                      <td>React JS</td>
+                    </tr>
+                    <tr>
+                        <td>Material UI</td>
+                        <td>Ant Design</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                 </table>
                 </div>
@@ -121,14 +120,27 @@
                 <br>
 
                 <!-- Section 3 -->
-                <h2 class="skills-header-turquoise">Skills</h2>
+                <h2 class="skills-header-turquoise">Mobile Development</h2>
                 <div class="skils-table-overflow">
                 <table id="skills-table">
                     <tr>
-                      <td>Coding</td>
-                      <td>Data Analysis</td>
-                      <td>Data Visualisation</td>
-                      <td>Statistics</td>
+                      <td>Dart</td>
+                      <td>Flutter</td>
+                      <td>Bloc</td>
+                      <td></td>
+                    </tr>
+                </table>
+                </div>
+
+                <!-- Section 4 -->
+                <h2 class="skills-header-turquoise">Backend Development</h2>
+                <div class="skils-table-overflow">
+                <table id="skills-table">
+                    <tr>
+                      <td>Django Web Framework</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
                     </tr>
                 </table>
                 </div>
