edited "Education" and "Contact"

--- a/changelog.html
+++ b/changelog.html
@@ -207,6 +207,20 @@
         </div>
     </section>
 
+    <section>
+        <div class="frosted-glass">
+            <div class="changelog">
+                <h2>Changelog #8</h2>
+                <h3>3/1/2023</h3>
+                <ul>
+                    <li>Edited "Education" to match current status</li>
+                    <li>Removed Email, GitHub and LinkedIn from "Contact"</li>
+                </ul>
+                <p><strong class="changelog-remark">Remarks: </strong>Taking no chances... I guess...</p>
+            </div>
+        </div>
+    </section>
+
     <br>
     <br>
     <br>
