--- a/contact.html
+++ b/contact.html
@@ -57,22 +57,22 @@
                 </div>
 
                 <!-- Button 2 -->
-                <!-- <button class="accordion disabled"><i style="font-size:24px" class="fas fa-envelope"></i> <span id="accordion-text-email">Email</span> <i style="font-size:24px" class="fa">&#xf078;</i></button>
+                <button class="accordion disabled"><i style="font-size:24px" class="fas fa-envelope"></i> <span id="accordion-text-email">Email</span> <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><i style="font-size:24px" class="fas fa-envelope"></i> </p>
-                </div> -->
+                    <p><i style="font-size:24px" class="fas fa-envelope"></i> REMOVED</p>
+                </div>
 
                 <!-- Button 3 -->
                 <button class="accordion disabled"><i style="font-size:24px" class="fab fa-github"></i> <span id="accordion-text-github">GitHub</span> <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><a target='_block' href="https://github.com/kleeJH"><i style="font-size:24px" class="fab fa-github"></i> kleeJH</a></p>
+                    <p><a target='_block' href="#"><i style="font-size:24px" class="fab fa-github"></i> REMOVED</a></p>
                 </div>
 
                 <!-- Button 4 -->
-                <!-- <button class="accordion disabled"><i style="font-size:24px" class="fab fa-linkedin"></i> <span id="accordion-text-linkedin">LinkedIn</span> <i style="font-size:24px" class="fa">&#xf078;</i></button>
+                <button class="accordion disabled"><i style="font-size:24px" class="fab fa-linkedin"></i> <span id="accordion-text-linkedin">LinkedIn</span> <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><a target='_block' href="#"><i style="font-size:24px" class="fab fa-linkedin"></i> </a></p>
-                </div> -->
+                    <p><a target='_block' href="#"><i style="font-size:24px" class="fab fa-linkedin"></i> REMOVED</a></p>
+                </div>
 
 
             </div>
