--- a/education.html
+++ b/education.html
@@ -69,55 +69,62 @@
             <div class="box-text education">
                 <h1>2020 - Present</h1>
                 <h2>Currently studying the Bachelor of Computer Science @ Monash University Malaysia</h2>
-                <p>As of Year 2 Semester 2, my GPA is 3.938.</p>
+                <p>As of Year 3 Semester 2, my GPA is 3.955.</p>
                 
                 <!-- Button 1 -->
                 <button class="accordion disabled">Year 1 Semester 1 Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT1045?year=2020">FIT1045 - Algorithms and programming fundamentals in python</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT1047">FIT1047 - Introduction to computer systems, networks and security</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT1051?year=2020">FIT1051 - Programming fundamentals in java</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/MAT1830">MAT1830 - Discrete mathematics for computer science</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT1045?year=2020">FIT1045 - Algorithms and programming fundamentals in python</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT1047">FIT1047 - Introduction to computer systems, networks and security</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT1051?year=2020">FIT1051 - Programming fundamentals in java</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/MAT1830">MAT1830 - Discrete mathematics for computer science</a></p>
                 </div>
 
                 <button class="accordion disabled">Year 1 Semester 2 Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT1008">FIT1008 - Introduction to computer science</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT1043">FIT1043 - Introduction to data science</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT1055">FIT1055 - IT professional practice and ethics</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/MAT1841?year=2020">MAT1841 - Continuous mathematics for computer science</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT1008">FIT1008 - Introduction to computer science</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT1043">FIT1043 - Introduction to data science</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT1055">FIT1055 - IT professional practice and ethics</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/MAT1841?year=2020">MAT1841 - Continuous mathematics for computer science</a></p>
                 </div>
 
                 <!-- Button 3 -->
                 <button class="accordion disabled">Year 2 Semester 1 Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT2004">FIT2004 - Algorithms and data structures</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT2093">FIT2093 - Introduction to cyber security</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT2094">FIT2094 - Databases</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT2099">FIT2099 - Object oriented design and implementation</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT2004">FIT2004 - Algorithms and data structures</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT2093">FIT2093 - Introduction to cyber security</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT2094">FIT2094 - Databases</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT2099">FIT2099 - Object oriented design and implementation</a></p>
                 </div>
 
                 <!-- Button 4 -->
                 <button class="accordion disabled">Year 2 Semester 2 Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><a target='_block' href="https://handbook.monash.edu/2021/units/FIT2014">FIT2014 - Theory of computation</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT2086">FIT2086 - Modelling for data analysis</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2020/units/FIT3003">FIT3003 - Business intelligence and data warehousing</a></p>
-                    <p><a target='_block' href="https://handbook.monash.edu/2021/units/FIT3179">FIT3179 - Data visualisation</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT2014">FIT2014 - Theory of computation</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT2086">FIT2086 - Modelling for data analysis</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3003">FIT3003 - Business intelligence and data warehousing</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3179">FIT3179 - Data visualisation</a></p>
                 </div>
 
                 <!-- Button 5 -->
                 <button class="accordion disabled">Year 3 Semester 1 Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p><a target='_block' href="https://handbook.monash.edu/2021/units/FIT3045">FIT3045 - Industry-based learning</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3045">FIT3045 - Industry-based learning</a></p>
                 </div>
 
                 <!-- Button 6 -->
                 <button class="accordion disabled">Year 3 Semester 2 Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
-                    <p>To be determined</p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3080">FIT3080 - Artificial intelligence</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3163">FIT3163 - Data science project 1</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3181">FIT3181 - Deep learning</a></p>
                 </div>
 
+                <!-- Button 7 -->
+                <button class="accordion disabled">Year 3 Summer A Unit <i style="font-size:24px" class="fa">&#xf078;</i></button>
+                <div class="panel">
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3164">FIT3164 - Data science project 2</a></p>
+                </div>
             </div>
         </div>
     </section>
