Added skills, added projects, fixed spelling errors

--- a/changelog.html
+++ b/changelog.html
@@ -226,6 +226,26 @@
     <br>
     <br>
 
+    <section>
+        <div class="frosted-glass">
+            <div class="changelog">
+                <h2>Changelog #9</h2>
+                <h3>23/3/2023</h3>
+                <ul>
+                    <li>Edited "Skills" to add a few skills</li>
+                    <li>Added a new project in "Projects"</li>
+                    <li>Fixed some spelling mistakes</li>
+                </ul>
+                <p><strong class="changelog-remark">Remarks: </strong>I wonder if I'll still continue to uphold this website. The CSS file is still a mess...</p>
+            </div>
+        </div>
+    </section>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
     <!-- <section>
         <div class="frosted-glass">
             <div class="changelog">
