--- a/projects.html
+++ b/projects.html
@@ -390,7 +390,54 @@
                         <td>Remarks</td>
                         <td class="projects-remarks">
                             <!-- Author's Note -->
-                            Took the knowledge I learned in my first internship and applied it to my new portfolio project. It now takes less hassle to change and modify the contents of the page due to sanity.io acting as a Content Management Systen.
+                            Took the knowledge I learned in my first internship and applied it to my new portfolio project. It now takes less hassle to change and modify the contents of the page due to sanity.io acting as a Content Management System.
+                        </td>
+                    </tr>
+                </table>
+                <!-- <br> -->
+            </div> <!-- End of accordion -->
+
+            <br>
+
+            <!-- Button 3 -->
+            <button class="accordion accordion-white-border disabled">Portfolio Website (Version 3)<i style="font-size:24px" class="fa">&#xf078;</i></button>
+            <div class="panel-projects projects-personal">
+                <!-- Personal Project 1-->
+                <table class="projects-table">
+                    <tr>
+                      <td>Project</td>
+                      <td>
+                          <!-- Info about Project Title -->
+                          Portfolio Website (Version 3)
+                      </td>
+                    </tr>
+
+                    <tr>
+                        <td>Role</td>
+                        <td>
+                            <!-- Info about Role in this Project -->
+                            Programmer and Designer
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>Outcomes</td>
+                        <td>
+                            <!-- Info about what you've learnt -->
+                            <ul>
+                                <li>Used React JS, Tailwind, ThreeJS and Framer Motion to design a web application</li>
+                                <li>Produced a more modern and simplistic design using frameworks</li>
+                                <li>Produced a website which introduced some bits of animations</li>
+                                <li>Introduced to the world of 3D objects in the browser using ThreeJS</li>
+                            </ul>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>Remarks</td>
+                        <td class="projects-remarks">
+                            <!-- Author's Note -->
+                            Saw some websites that uses 3D objects, and was interested to apply it into my own website.
                         </td>
                     </tr>
                 </table>
