--- a/skills.html
+++ b/skills.html
@@ -89,7 +89,7 @@
                     </tr>
                     <tr>
                       <td>SQL</td>
-                      <td></td>
+                      <td>C++</td>
                       <td></td>
                       <td></td>
                     </tr>
@@ -109,9 +109,9 @@
                       <td>React JS</td>
                     </tr>
                     <tr>
-                        <td>Material UI</td>
-                        <td>Ant Design</td>
-                        <td></td>
+                        <td>SCSS</td>
+                        <td>Tailwind</td>
+                        <td>Three JS</td>
                         <td></td>
                     </tr>
                 </table>
@@ -127,7 +127,7 @@
                       <td>Dart</td>
                       <td>Flutter</td>
                       <td>Bloc</td>
-                      <td></td>
+                      <td>Android</td>
                     </tr>
                 </table>
                 </div>
@@ -138,7 +138,7 @@
                 <table id="skills-table">
                     <tr>
                       <td>Django Web Framework</td>
-                      <td></td>
+                      <td>REST API</td>
                       <td></td>
                       <td></td>
                     </tr>
