Last update to portfolio v1

--- a/changelog.html
+++ b/changelog.html
@@ -246,6 +246,26 @@
     <br>
     <br>
 
+    <section>
+        <div class="frosted-glass">
+            <div class="changelog">
+                <h2>Changelog #10</h2>
+                <h3>6/9/2023</h3>
+                <ul>
+                    <li>Updated "Education"</li>
+                    <li>Changed FAQ in "Home" page</li>
+                    <li>Edited "Skills" to add a few skills</li>
+                </ul>
+                <p><strong class="changelog-remark">Remarks: </strong>Last update for my pure HTML CSS JS webpage. o7</p>
+            </div>
+        </div>
+    </section>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
     <!-- <section>
         <div class="frosted-glass">
             <div class="changelog">
