--- a/education.html
+++ b/education.html
@@ -67,9 +67,9 @@
     <section>
         <div class="frosted-glass">
             <div class="box-text education">
-                <h1>2020 - Present</h1>
-                <h2>Currently studying the Bachelor of Computer Science @ Monash University Malaysia</h2>
-                <p>As of Year 3 Semester 2, my GPA is 3.955.</p>
+                <h1>2020 - 2023</h1>
+                <h2>Completed the Bachelor of Computer Science @ Monash University Malaysia</h2>
+                <p>Graduated with a GPA of 3.958.</p>
                 
                 <!-- Button 1 -->
                 <button class="accordion disabled">Year 1 Semester 1 Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
@@ -121,9 +121,10 @@
                 </div>
 
                 <!-- Button 7 -->
-                <button class="accordion disabled">Year 3 Summer A Unit <i style="font-size:24px" class="fa">&#xf078;</i></button>
+                <button class="accordion disabled">Remaining Units <i style="font-size:24px" class="fa">&#xf078;</i></button>
                 <div class="panel">
                     <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT3164">FIT3164 - Data science project 2</a></p>
+                    <p><a target='_block' href="https://handbook.monash.edu/2023/units/FIT2081">FIT2081 - Mobile application development</a></p>
                 </div>
             </div>
         </div>
