--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
             <div class="box-text strokeme">
                 <!-- <strong class="faq-question">Q</strong>N<strong class="faq-answer">A</strong> -->
                 <h1 class="h1-underline-turquoise">FAQ</h1>
-                <p><strong class="faq-question">Q:</strong> How frequent will this website be updated? <br> <strong class="faq-answer">A:</strong> I will try to maintain it along with my React JS portfolio.</p>
-
-                <p><strong class="faq-question">Q:</strong> How long will this project last? <br> <strong class="faq-answer">A:</strong> I might stop continuing maintaining this project as I have start a new Portfolio project using more modern web development techniques.</p>
-
+                <p><strong class="faq-question">Q:</strong> How frequent will this website be updated? <br> <strong class="faq-answer">A:</strong> This project is not being updated since 6/9/2023.</p>
                 <p><strong class="faq-question">Q:</strong> How am I able to contact you? <br> <strong class="faq-answer">A:</strong> Sorry. I'm not willing to share my contact information but I'll leave my discord in "Contact".</p>
             </div>
         </div>
