--- a/skills.html
+++ b/skills.html
@@ -82,7 +82,7 @@
                 <div class="skils-table-overflow">
                 <table id="skills-table">
                     <tr>
-                      <td>Bash</td>
+                      <td>Bash/Shell</td>
                       <td>Java</td>
                       <td>Python</td>
                       <td>R</td>
@@ -90,7 +90,7 @@
                     <tr>
                       <td>SQL</td>
                       <td>C++</td>
-                      <td></td>
+                      <td>C#</td>
                       <td></td>
                     </tr>
                 </table>
@@ -139,7 +139,7 @@
                     <tr>
                       <td>Django Web Framework</td>
                       <td>REST API</td>
-                      <td></td>
+                      <td>C# .NET ASP.NET</td>
                       <td></td>
                     </tr>
                 </table>
