Updated minor things

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
     </nav>     
 
     <!-- Section -->
+    <!-- Not Updating -->
+    <section>
+        <div class="frosted-glass">
+            <div class="box-text strokeme">
+                <h1 class="h1-underline-turquoise">Not Updating Anymore...</h1>
+                <p>It's not you it's me. This project is not being updated since 6/9/2023!</p>
+            </div>
+    </section>
+
     <!-- Introductory -->
     <section>
         <div class="frosted-glass">
@@ -52,7 +61,7 @@
                 <p>Hello! Welcome to my first ever attempt at creating a website. It might look rough around the edges but I'm still getting used to it. Anyway, the reason I started working on this project is to expand my knowledge on how websites are developed. I guess we can think of this project to satisfy my curiosity on front-end development. I went into this not knowing how it works, so I started doing some research and watched some crash courses on HTML, CSS and JS on Youtube. After all that, this is how it turned out.</p>
                 <p>I'll try to treat this as a long-term project where I try to keep this website as up-to-date as possible based on my own progress. I'll also introduce some new features here and there to spice my website even more! Other than that, thank you for reading this and I hope you enjoy my first ever project.</p>
                 <p>Here are some of the videos that got me started: <a target='_block' href="https://www.youtube.com/watch?v=UB1O30fR-EE">HTML</a>, <a target='_block' href="https://www.youtube.com/watch?v=yfoY53QXEnI">CSS</a> and <a target='_block' href="https://www.youtube.com/watch?v=hdI2bqOjy3c">JS</a>. Special props to <a target='_block' href="https://www.youtube.com/channel/UC29ju8bIPH5as8OGnQzwJyA">Traversy Media</a> for the spectacular videos!</p>
-                <p>Link to <a target='_block' href="https://junhong-portfolio.netlify.app/">my new portfolio page</a> created using React JS, SCSS, React UI Frameworks, and sanity.io.</p>
+                <p>Link to <a target='_block' href="https://junhong-portfolio.netlify.app/">my new portfolio page</a> created using Next JS, React JS, Three JS & framer-motion, .</p>
             </div>
     </section>
 
