--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="frosted-glass">
             <div class="box-text strokeme">
                 <h1 class="h1-underline-turquoise">Not Updating Anymore...</h1>
-                <p>It's not you it's me. This project is not being updated since 6/9/2023!</p>
+                <p>It's not you it's me. This project has not been updated since 6/9/2023!</p>
             </div>
     </section>
 
