--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section>
         <div class="frosted-glass">
             <div class="box-text strokeme">
-                <h1 class="h1-underline-turquoise">Not Updating Anymore...</h1>
+                <h1 class="h1-underline-turquoise">Discontinued.</h1>
                 <p>It's not you it's me. This project has not been updated since 6/9/2023!</p>
             </div>
     </section>
